--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+.DS_Store
 *.dev.sh
 app/plugins/dist
 app/plugins/logs
