--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ services:
 jobs:
   fast_finish: true
   include:
+    - name: MySQL8.0-1.17.x
+      go: 1.17.x
+      env:
+        - GOU_TEST_API_ROOT="$TRAVIS_BUILD_DIR/app/apis" GOU_TEST_MOD_ROOT="$TRAVIS_BUILD_DIR/app/models" GOU_TEST_PLG_ROOT="$HOME/data/gou-unit/plugins" GOU_TEST_PLG_LOG="$HOME/data/gou-unit/logs" GOU_TEST_DSN="root:123456@tcp(127.0.0.1:3308)/xun?charset=utf8mb4&parseTime=True&loc=Local" GOT_TEST_AES_KEY="^*aNBue!loLTTiP*4i&BSK7s#QRbe0^g" CODECOV_TOKEN='3683ff24-57de-4282-a5da-de0799f04969'
+      before_install:
+        - unit/service.sh mysql8.0 # Start MySQL 8.0 service
     - name: MySQL5.7-1.17.x
       go: 1.17.x
       env:
