--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -1,4 +1,4 @@
-name: Go
+name: Unit-Test
 
 on:
   push:
@@ -17,10 +17,7 @@ jobs:
       DSN: default
     steps:
       - name: Setup MySQL8.0
-        id: MySQL8.0
         if: "contains(matrix.db, 'MySQL8.0')"
-        env:
-          DSN: MySQL8.0          
         uses: mirromutth/mysql-action@v1.1
         with:
           character set server: "utf8"
@@ -30,13 +27,15 @@ jobs:
           mysql root password: "123456"
           mysql user: "gou"
           mysql password: "123456"
-       
+
+      - name: Setup MySQL8.0 ENV
+        if: "contains(matrix.db, 'MySQL8.0')"
+        env:
+          DSN: MySQL8.0
+        run: echo "DSN=${{ env.DSN }}" >> $GITHUB_ENV
 
       - name: Setup MySQL5.7
-        id: db-setting
         if: "contains(matrix.db, 'MySQL5.7')"
-        env:
-          DSN: MySQL5.7
         uses: mirromutth/mysql-action@v1.1
         with:
           character set server: "utf8"
@@ -46,6 +45,12 @@ jobs:
           mysql root password: "123456"
           mysql user: "gou"
           mysql password: "123456"
+
+      - name: Setup MySQL5.7 ENV
+        if: "contains(matrix.db, 'MySQL8.0')"
+        env:
+          DSN: MySQL5.7
+        run: echo "DSN=MySQL5.7" >> $GITHUB_ENV
 
       - name: Setup Postgres9.6
         if: "contains(matrix.db, 'Postgres9.6')"
