--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -47,10 +47,10 @@ jobs:
           mysql password: "123456"
 
       - name: Setup MySQL5.7 ENV
-        if: "contains(matrix.db, 'MySQL8.0')"
+        if: "contains(matrix.db, 'MySQL5.7')"
         env:
           DSN: MySQL5.7
-        run: echo "DSN=MySQL5.7" >> $GITHUB_ENV
+        run: echo "DSN=${{ env.DSN }}" >> $GITHUB_ENV
 
       - name: Setup Postgres9.6
         if: "contains(matrix.db, 'Postgres9.6')"
@@ -63,6 +63,13 @@ jobs:
           postgresql user: "gou"
           postgresql password: "123456"
 
+
+      - name: Setup Postgres9.6 ENV
+        if: "contains(matrix.db, 'Postgres9.6')"
+        env:
+          DSN: Postgres9.6
+        run: echo "DSN=${{ env.DSN }}" >> $GITHUB_ENV
+
       - name: Setup Postgres14
         if: "contains(matrix.db, 'Postgres14')"
         uses: harmon758/postgresql-action@v1
@@ -74,11 +81,25 @@ jobs:
           postgresql user: "gou"
           postgresql password: "123456"
 
+      - name: Setup Postgres14 ENV
+        if: "contains(matrix.db, 'Postgres14')"
+        env:
+          DSN: Postgres14
+        run: echo "DSN=${{ env.DSN }}" >> $GITHUB_ENV
+
+
       - name: Setup SQLite3
         if: "contains(matrix.db, 'SQLite3')"
         env:
           DSN: SQLite3
         run: echo "SQLite"
+      
+       - name: Setup SQLite3 ENV
+        if: "contains(matrix.db, 'SQLite3')"
+        env:
+          DSN: SQLite3
+        run: echo "DSN=${{ env.DSN }}" >> $GITHUB_ENV
+
 
       - name: Setup Go ${{ matrix.go }}
         uses: actions/setup-go@v2
