--- a/.github/actions/setup-db/action.yml
+++ b/.github/actions/setup-db/action.yml
@@ -15,5 +15,5 @@ inputs:
     required: false
     default: "123456"
 runs:
-  using: 'docker'
-  image: 'Dockerfile
+  using: "docker"
+  image: "Dockerfile"
