--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,7 +14,12 @@ jobs:
         go: [1.13, 1.17]
         db: [MySQL8.0, MySQL5.7, Postgres9.6, Postgres14, SQLite3]
     env:
-      DSN: default
+      GOU_TEST_DSN: default
+      GOU_TEST_API_ROOT: "${{ env.GITHUB_WORKSPACE }}/app/apis"
+      GOU_TEST_FLW_ROOT: "${{ env.GITHUB_WORKSPACE }}/app/flows"
+      GOU_TEST_MOD_ROOT: "${{ env.GITHUB_WORKSPACE }}/app/models"
+      GOU_TEST_PLG_ROOT: "${{ env.HOME }}/data/gou-unit/plugins"
+      GOU_TEST_PLG_LOG: "${{ env.HOME }}/data/gou-unit/logs"
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -31,7 +36,10 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
 
-      - name: Test
+      - name: Run Test
         run: |
-          echo $DSN
+          GOU_TEST_DSN=$DSN
+          echo $GOU_TEST_DSN
+          echo $GOU_TEST_API_ROOT
+          echo $GOU_TEST_PLG_ROOT
           export
