--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -32,20 +32,29 @@ jobs:
         with:
           go-version: ${{ matrix.go }}
 
-      - name: Run Test
+      - name: Setup Go Tools
         run: |
-          # Install Tools
           if [[ "${GO111MODULE}" = "on" ]]; then go mod download; fi
           if [[ "${GO111MODULE}" = "on" ]]; then export PATH="${GOPATH}/bin:${GOROOT}/bin:${PATH}"; fi
           if [[ "${GO111MODULE}" = "on" ]]; then make tools; fi
-          # Setup ENV
+
+      - name: Setup ENV
+        run: |
           export GOU_TEST_DSN=$DSN
           export GOU_TEST_API_ROOT="$GITHUB_WORKSPACE/app/apis"
           export GOU_TEST_FLW_ROOT="$GITHUB_WORKSPACE/app/flows"
           export GOU_TEST_MOD_ROOT="$GITHUB_WORKSPACE/app/models"
           export GOU_TEST_PLG_ROOT="$HOME/data/gou-unit/plugins"
           export GOU_TEST_PLG_LOG="$HOME/data/gou-unit/logs"
-          # RUN Test
+
+      - name: Run Test
+        run: |
+          echo $GOU_TEST_DSN
+          echo $GOU_TEST_API_ROOT
+          echo $GOU_TEST_FLW_ROOT
+          echo $GOU_TEST_MOD_ROOT
+          echo $GOU_TEST_PLG_ROOT
+          echo $GOU_TEST_PLG_LOG
           make vet
           make fmt-check
           make misspell-check
