--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         go: [1.13, 1.17]
-        db: [MySQL8.0, MySQL5.7, SQLite3]
+        db: [MySQL8.0, SQLite3]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -41,11 +41,11 @@ jobs:
       - name: Setup ENV
         run: |
           echo "GOU_TEST_DSN=$DSN" >> $GITHUB_ENV
-          echo "GOU_TEST_API_ROOT="$GITHUB_WORKSPACE/app/apis" >> $GITHUB_ENV
-          echo "GOU_TEST_FLW_ROOT="$GITHUB_WORKSPACE/app/flows" >> $GITHUB_ENV
-          echo "GOU_TEST_MOD_ROOT="$GITHUB_WORKSPACE/app/models" >> $GITHUB_ENV
-          echo "GOU_TEST_PLG_ROOT="$HOME/data/gou-unit/plugins" >> $GITHUB_ENV
-          echo "GOU_TEST_PLG_LOG="$HOME/data/gou-unit/logs" >> $GITHUB_ENV
+          echo "GOU_TEST_API_ROOT=$GITHUB_WORKSPACE/app/apis" >> $GITHUB_ENV
+          echo "GOU_TEST_FLW_ROOT=$GITHUB_WORKSPACE/app/flows" >> $GITHUB_ENV
+          echo "GOU_TEST_MOD_ROOT=$GITHUB_WORKSPACE/app/models" >> $GITHUB_ENV
+          echo "GOU_TEST_PLG_ROOT=$HOME/data/gou-unit/plugins" >> $GITHUB_ENV
+          echo "GOU_TEST_PLG_LOG=$HOME/data/gou-unit/logs" >> $GITHUB_ENV
 
       - name: Run Test
         run: |
