--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         go: [1.13, 1.17]
-        db: [MySQL8.0]
+        db: [MySQL8.0, SQLite3]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -41,6 +41,7 @@ jobs:
       - name: Setup ENV
         run: |
           echo "GOU_TEST_DSN=$DSN" >> $GITHUB_ENV
+          echo "GOU_TEST_DB_DRIVER=$DB_DRIVER" >> $GITHUB_ENV
           echo "GOU_TEST_API_ROOT=$GITHUB_WORKSPACE/app/apis" >> $GITHUB_ENV
           echo "GOU_TEST_FLW_ROOT=$GITHUB_WORKSPACE/app/flows" >> $GITHUB_ENV
           echo "GOU_TEST_MOD_ROOT=$GITHUB_WORKSPACE/app/models" >> $GITHUB_ENV
@@ -49,12 +50,6 @@ jobs:
 
       - name: Run Test
         run: |
-          echo "GOU_TEST_DSN=$GOU_TEST_DSN"
-          echo "GOU_TEST_API_ROOT=$GOU_TEST_API_ROOT"
-          echo "GOU_TEST_FLW_ROOT=$GOU_TEST_FLW_ROOT"
-          echo "GOU_TEST_MOD_ROOT=$GOU_TEST_MOD_ROOT"
-          echo "GOU_TEST_PLG_ROOT=$GOU_TEST_PLG_ROOT"
-          echo "GOU_TEST_PLG_LOG=$GOU_TEST_PLG_LOG"
           make vet
           make fmt-check
           make misspell-check
