--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         go: [1.13, 1.17]
-        db: [SQLite3]
+        db: [MySQL8.0]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
