--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -5,8 +5,10 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+
 env:
   GOT_TEST_AES_KEY: "^*aNBue!loLTTiP*4i&BSK7s#QRbe0^g"
+
 jobs:
   unit-test:
     runs-on: ubuntu-latest
@@ -57,6 +59,6 @@ jobs:
           make test
 
       - name: Codecov Report
-      - uses: codecov/codecov-action@v2
+        uses: codecov/codecov-action@v2
         with:
           token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
