--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         go: [1.13, 1.17]
-        db: [MySQL8.0]
+        db: [MySQL8.0, SQLite3]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
