change v8 version for arm64

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -29,10 +29,18 @@ jobs:
           repository: yaoapp/xun
           path: xun
 
-      - name: Move Kun, Xun
+      - name: Checkout V8Go
+        uses: actions/checkout@v2
+        with:
+          repository: rogchap/v8go
+          ref: 5e91d3d9dcabd2986f901b6b31590e49fc3c4dd8
+          path: v8go
+
+      - name: Move Kun, Xun, V8go
         run: |
           mv kun ../
           mv xun ../
+          mv v8go ../
           ls -l .
           ls -l ../
 
