--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -7,7 +7,9 @@ on:
     branches: [main]
 
 env:
-  GOT_TEST_AES_KEY: "^*aNBue!loLTTiP*4i&BSK7s#QRbe0^g"
+  GOU_TEST_AES_KEY: "^*aNBue!loLTTiP*4i&BSK7s#QRbe0^g"
+  GOU_TEST_REDIS_HOST: "127.0.0.1"
+  GOU_TEST_REDIS_PORT: "6379"
 
 jobs:
   unit-test:
@@ -16,6 +18,7 @@ jobs:
       matrix:
         go: [1.17]
         db: [MySQL8.0, SQLite3]
+        redis: [4, 5, 6]
     steps:
       - name: Checkout Kun
         uses: actions/checkout@v2
@@ -46,6 +49,11 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Start Redis
+        uses: supercharge/redis-github-action@1.4.0
+        with:
+          redis-version: ${{ matrix.redis }}
 
       - name: Setup ${{ matrix.db }}
         uses: ./.github/actions/setup-db
