--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -39,11 +39,18 @@ jobs:
           ref: 5e91d3d9dcabd2986f901b6b31590e49fc3c4dd8
           path: v8go
 
+      - name: Checkout Demo WMS
+        uses: actions/checkout@v2
+        with:
+          repository: yaoapp/demo-wms
+          path: demo-wms
+
       - name: Move Kun, Xun, V8go
         run: |
           mv kun ../
           mv xun ../
           mv v8go ../
+          mv demo-wms ../
           ls -l .
           ls -l ../
 
@@ -83,6 +90,8 @@ jobs:
           echo "GOU_TEST_SCRIPT_ROOT=$GITHUB_WORKSPACE/app/scripts" >> $GITHUB_ENV
           echo "GOU_TEST_QUERY_ROOT=$GITHUB_WORKSPACE/query/assets" >> $GITHUB_ENV
           echo "GOU_TEST_PLG_LOG=$HOME/data/gou-unit/logs" >> $GITHUB_ENV
+          echo "GOU_TEST_APP_ROOT=$GITHUB_WORKSPACE/tests/app" >> $GITHUB_ENV
+          echo "YAO_PATH=$GITHUB_WORKSPACE/tests/yao" >> $GITHUB_ENV
 
       - name: Run Test
         run: |
