--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -10,6 +10,8 @@ env:
   GOU_TEST_AES_KEY: "^*aNBue!loLTTiP*4i&BSK7s#QRbe0^g"
   GOU_TEST_REDIS_HOST: "127.0.0.1"
   GOU_TEST_REDIS_PORT: "6379"
+  GOU_TEST_GITHUB_TOKEN: ${{ secrets.GOU_TEST_GITHUB_TOKEN }}
+  GOU_TEST_GITHUB_REPO: github.com/YaoApp/workshop-tests-private
 
 jobs:
   unit-test:
