--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -14,6 +14,7 @@ env:
   GOU_TEST_GITHUB_REPO: github.com/YaoApp/workshop-tests-private
   GOU_TEST_DSL_TABLE_NAME: test_env
   SEND_MAIL_WORKER_NUMS: 2
+  SEND_MAIL_TEST_MAIL: max@iqka.com
 
 jobs:
   unit-test:
