--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -42,7 +42,7 @@ jobs:
         go: [1.18.2]
         db: [MySQL8.0, SQLite3]
         redis: [4, 5, 6]
-        mongodb: ["6.0"]
+        mongo: ["6.0"]
     steps:
       - name: "Download artifact"
         uses: actions/github-script@v3.1.0
@@ -145,7 +145,7 @@ jobs:
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.8.0
         with:
-          mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-version: ${{ matrix.mongo }}
           mongodb-username: root
           mongodb-password: 123456
           mongodb-db: test
