--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -44,7 +44,7 @@ jobs:
         go: [1.18.2]
         db: [MySQL8.0, SQLite3]
         redis: [4, 5, 6]
-        mongodb: ["6.0"]
+        mongo: ["6.0"]
     steps:
       - name: Checkout Kun
         uses: actions/checkout@v2
@@ -91,7 +91,7 @@ jobs:
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.8.0
         with:
-          mongodb-version: ${{ matrix.mongodb-version }}
+          mongodb-version: ${{ matrix.mongo }}
           mongodb-username: root
           mongodb-password: 123456
           mongodb-db: test
