--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -15,7 +15,7 @@ env:
   GOU_TEST_GITHUB_TOKEN: ${{ secrets.GOU_TEST_GITHUB_TOKEN }}
   GOU_TEST_GITHUB_REPO: github.com/YaoApp/workshop-tests-private
   GOU_TEST_DSL_TABLE_NAME: test_env
-  GOU_TEST_APPLICATION: ${{ github.WORKSPACE }}/../gou-dev-app
+  GOU_TEST_APPLICATION: ${{ github.WORKSPACE }}/gou-dev-app
   SEND_MAIL_WORKER_NUMS: 2
   SEND_MAIL_TEST_MAIL: max@iqka.com
   REPO_KUN: ${{ github.repository_owner }}/kun
@@ -85,7 +85,6 @@ jobs:
           mv xun ../
           mv v8go ../
           mv demo-wms ../
-          mv gou-dev-app ../
           ls -l .
           ls -l ../
 
