--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -66,13 +66,6 @@ jobs:
           repository: ${{ env.REPO_APP }}
           path: gou-dev-app
 
-      - name: Checkout V8Go
-        uses: actions/checkout@v3
-        with:
-          repository: rogchap/v8go
-          ref: 5e91d3d9dcabd2986f901b6b31590e49fc3c4dd8
-          path: v8go
-
       - name: Checkout Demo WMS
         uses: actions/checkout@v3
         with:
@@ -83,7 +76,6 @@ jobs:
         run: |
           mv kun ../
           mv xun ../
-          mv v8go ../
           mv demo-wms ../
           mv gou-dev-app ../
           ls -l .
@@ -163,6 +155,10 @@ jobs:
           make plugin
           make migrate
           make test
+
+      - name: Run Benchmark
+        run: |
+          make bench
 
       - name: Codecov Report
         uses: codecov/codecov-action@v3
