[add] v8 runtime bridge tests

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -66,6 +66,13 @@ jobs:
           repository: ${{ env.REPO_APP }}
           path: gou-dev-app
 
+      - name: Checkout V8Go
+        uses: actions/checkout@v3
+        with:
+          repository: yaoapp/v8go
+          ref: aac4923ed74083e58ae7b42b1acb0fa0d11a26cb
+          path: v8go
+
       - name: Checkout Demo WMS
         uses: actions/checkout@v3
         with:
@@ -76,6 +83,7 @@ jobs:
         run: |
           mv kun ../
           mv xun ../
+          mv v8go ../
           mv demo-wms ../
           mv gou-dev-app ../
           ls -l .
