--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -70,10 +70,10 @@ jobs:
           path: gou-dev-app
 
       - name: Checkout V8Go
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: yaoapp/v8go
-          # ref: aac4923ed74083e58ae7b42b1acb0fa0d11a26cb
+          lfs: true
           path: v8go
 
       - name: Checkout Demo WMS
