Update GitHub Actions workflow to modify health check command and add health start period. This change replaces the health check command with a wget-based approach for better reliability and introduces a health start period of 20 seconds, enhancing the service monitoring during unit tests.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -55,10 +55,11 @@ jobs:
           - 6333:6333  # HTTP API
           - 6334:6334  # gRPC
         options: >-
-          --health-cmd "curl -f http://localhost:6333/healthz"
+          --health-cmd "wget --spider -q http://127.0.0.1:6333/"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+          --health-start-period 20s
 
     strategy:
       matrix:
