Update Fastembed image architecture in CI workflows
- Changed the Fastembed image from `latest-arm64` to `latest-amd64` in both `pr-test.yml` and `unit-test.yml` workflows to ensure compatibility with the intended architecture.

--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -64,7 +64,7 @@ jobs:
           - 6334:6334 # gRPC
 
       fastembed:
-        image: yaoapp/fastembed:latest-arm64
+        image: yaoapp/fastembed:latest-amd64
         env:
           FASTEMBED_PASSWORD: Yao@2026
         ports:
