--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -49,6 +49,10 @@ env:
   FASTEMBED_TEST_KEY: "Yao@2026"
   FASTEMBED_TEST_MODEL: "BAAI/bge-small-en-v1.5"
 
+  NEO4J_TEST_URL: "neo4j://127.0.0.1:7687"
+  NEO4J_TEST_USER: "neo4j"
+  NEO4J_TEST_PASS: "Yao2026Neo4j"
+
 jobs:
   unit-test:
     runs-on: ubuntu-latest
@@ -66,6 +70,13 @@ jobs:
           FASTEMBED_PASSWORD: Yao@2026
         ports:
           - 6001:8000
+
+      neo4j:
+        image: neo4j:latest
+        ports:
+          - "7687:7687"
+        env:
+          NEO4J_AUTH: neo4j/Yao2026Neo4j
 
     strategy:
       matrix:
