Add FFmpeg setup to CI workflows and enhance ffmpeg_test.go
- Integrated FFmpeg setup in both GitHub Actions workflows (pr-test.yml and unit-test.yml) to ensure FFmpeg is available for testing.
- Added a test step to verify FFmpeg installation by checking its version.
- Refactored ffmpeg_test.go to improve test structure and coverage, including platform-specific tests and job management functionalities.
- Enhanced error handling and logging in tests to facilitate debugging and ensure robustness.

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -235,6 +235,21 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
+          
+      - uses: FedericoCarboni/setup-ffmpeg@v3
+        id: setup-ffmpeg
+        with:
+          # A specific version to download, may also be "release" or a specific version
+          # like "6.1.0". At the moment semver specifiers (i.e. >=6.1.0) are supported
+          # only on Windows, on other platforms they are allowed but version is matched
+          # exactly regardless.
+          ffmpeg-version: release
+          # Target architecture of the ffmpeg executable to install. Defaults to the
+          # system architecture. Only x64 and arm64 are supported (arm64 only on Linux).
+          architecture: x64
+
+      - name: Test FFmpeg
+        run: ffmpeg -version
 
       - name: Setup Go Tools
         run: |
