--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -239,14 +239,9 @@ jobs:
       - uses: FedericoCarboni/setup-ffmpeg@v3
         id: setup-ffmpeg
         with:
-          # A specific version to download, may also be "release" or a specific version
-          # like "6.1.0". At the moment semver specifiers (i.e. >=6.1.0) are supported
-          # only on Windows, on other platforms they are allowed but version is matched
-          # exactly regardless.
           ffmpeg-version: release
-          # Target architecture of the ffmpeg executable to install. Defaults to the
-          # system architecture. Only x64 and arm64 are supported (arm64 only on Linux).
           architecture: x64
+          github-token: ${{ github.server_url == 'https://github.com' && github.token || '' }}
 
       - name: Test FFmpeg
         run: ffmpeg -version
