--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -235,13 +235,13 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: ${{ matrix.go }}
-          
+
       - name: Install FFmpeg 7.x
         run: |
-          wget https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-amd64-static.tar.xz
-          tar -xf ffmpeg-git-amd64-static.tar.xz
-          sudo cp ffmpeg-git-*-amd64-static/ffmpeg /usr/local/bin/
-          sudo cp ffmpeg-git-*-amd64-static/ffprobe /usr/local/bin/
+          wget https://github.com/BtbN/FFmpeg-Builds/releases/download/latest/ffmpeg-master-latest-linux64-gpl.tar.xz
+          tar -xf ffmpeg-master-latest-linux64-gpl.tar.xz
+          sudo cp ffmpeg-master-latest-linux64-gpl/bin/ffmpeg /usr/local/bin/
+          sudo cp ffmpeg-master-latest-linux64-gpl/bin/ffprobe /usr/local/bin/
           sudo chmod +x /usr/local/bin/ffmpeg /usr/local/bin/ffprobe
 
       - name: Test FFmpeg
